syntax = "proto3";

package foo.bar;

message GreetRequest {
    string name = 1;
}

message GreetResponse {
    string message = 1;
}

service Greeter {
    rpc Greet(GreetRequest) returns (GreetResponse) { }
}

// An unrelated proto message to use for testing error cases.
message UnrelatedMessage {
    int64 number = 1;
}